--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ h1 {
 .section-items {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 20px;
   margin: 20px auto;
   padding: 10px;
@@ -137,7 +137,15 @@ h1 {
   .section-title {
     font-size: 28px;
   }
+  .section-items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .items {
     margin-top: 40px;
+  }
+  .items p {
+    text-align: center;
   }
 }
